==> NanoEEG/NanoEEG_CC3235S_tirtos_ccs/service/ads1299.c <==
#include <ti/drivers/SPI.h>
#include <ti/drivers/GPIO.h>
#include <ti/devices/cc32xx/driverlib/utils.h>
#include "ti_drivers_config.h"
#include "ads1299.h"

void ADS1299_SendCommand(uint8_t command)
{
    uint8_t         transmitBuffer = command;
    uint8_t         receiveBuffer;
    SPI_Transaction transaction;
    bool            transferOK;


    Mod_CS_Enable
    WaitUs(6);

    transaction.count = 1;
    transaction.txBuf = &transmitBuffer;
    transaction.rxBuf = &receiveBuffer;

    transferOK = SPI_transfer(masterSpi, &transaction);
    if (!transferOK)
    {
      //  while(1);               // error
    }

    WaitUs(10);                 // Delay time, final SCLK falling edge to CS high
    Mod_CS_Disable
    WaitUs(10);                 // Pulse duration, CS high
}

void ADS1299_WriteREG (uint8_t dev, uint8_t address, uint8_t value)
{
    address += 0x40;
    uint8_t         i;
    uint8_t         transmitBuffer[3] = {address,0x00,value}; // address / reg number-1 =0x00 / value
    SPI_Transaction transaction;
    bool            transferOK;

    Mod_CS_Enable

    for (i= 0; i < 3; i++)
    {
        transaction.count = 1;
        transaction.txBuf = (void *)(transmitBuffer+i);
        transaction.rxBuf = (void *)NULL;

        transferOK = SPI_transfer(masterSpi, &transaction);
        if (transferOK)
            WaitUs(10);
    }

    Mod_CS_Disable
}

uint8_t ADS1299_ReadREG (uint8_t dev, uint8_t address)
{
    address += 0x20;
    uint8_t         i;
    uint8_t         transmitBuffer[3] = {address,0x00,DummyByte}; // address / reg number-1 =0x00 / DummyByte=0xaa
    uint8_t         receiveBuffer[3];
    SPI_Transaction transaction;
    bool            transferOK;

    Mod_CS_Enable

    for (i= 0; i < 3; i++)
    {
        transaction.count = 1;
        transaction.txBuf = (void *)(transmitBuffer+i);
        transaction.rxBuf = (void *)(receiveBuffer+i);

        transferOK = SPI_transfer(masterSpi, &transaction);
        if (transferOK)
            WaitUs(10);
    }

    Mod_CS_Disable

  return receiveBuffer[2];
}

void ADS1299_ReadResult(uint8_t *result)
{
    SPI_Transaction transaction;
    bool            transferOK;

    //DMA
    #ifdef Dev_Ch32
    transaction.count = 108;
    #endif
    #ifdef Dev_Ch24
    transaction.count = 81;
    #endif
    #ifdef Dev_Ch16
    transaction.count = 54;
    #endif
    #ifdef Dev_Ch8
    transaction.count = 27;
    #endif

    transaction.txBuf = (void *)NULL;
    transaction.rxBuf = (void *)result;

    transferOK = SPI_transfer(masterSpi, &transaction);
    if (!transferOK) 
	{
		while(1);
	}
}
