==> gjmsilly/MicroEEG/Src/ads1299.c <==
#include "main.h"
#include "stm32f4xx_hal.h"
#include "ADS1299.h"

void ADS1299_WriteREG (uint8_t dev, uint8_t address, uint8_t value)
{
	
	address += 0x40;			
	__disable_irq();
	
	Mod_CS_Enable;
	
	while(!LL_SPI_IsActiveFlag_TXE(SPI1));
	SPI1->DR = address;
	while(!LL_SPI_IsActiveFlag_RXNE(SPI1));
	address = SPI1->DR;
	WaitUs(4);														// 2us Command decode time 
	while(!LL_SPI_IsActiveFlag_TXE(SPI1));
	SPI1->DR = 0;
	while(!LL_SPI_IsActiveFlag_RXNE(SPI1));
	address = SPI1->DR;
	WaitUs(4);														// 2us Command decode time
	while(!LL_SPI_IsActiveFlag_TXE(SPI1));
	SPI1->DR = value;
	while(!LL_SPI_IsActiveFlag_RXNE(SPI1));
	while(LL_SPI_IsActiveFlag_BSY(SPI1));
	
	WaitUs(2);													// Delay time, final SCLK falling edge to CS high
	Mod_CS_Disable;
  __enable_irq();
  
  
}

uint8_t ADS1299_ReadREG (uint8_t dev, uint8_t address)
{
	address += 0x20;

	uint8_t DRchar;	
		
	__disable_irq();
	
	Mod_CS_Enable;
	
	DRchar = SPI1->DR;
	while(!LL_SPI_IsActiveFlag_TXE(SPI1));
	SPI1->DR = address;
	while(!LL_SPI_IsActiveFlag_RXNE(SPI1));
	DRchar = SPI1->DR;
	WaitUs(4);														// 2us Command decode time
	while(!LL_SPI_IsActiveFlag_TXE(SPI1));
	SPI1->DR = 0;
	while(!LL_SPI_IsActiveFlag_RXNE(SPI1));
	DRchar = SPI1->DR;
	WaitUs(4);														// 2us Command decode time
	while(!LL_SPI_IsActiveFlag_TXE(SPI1));
	SPI1->DR = 0;
	while(!LL_SPI_IsActiveFlag_RXNE(SPI1));
	while(LL_SPI_IsActiveFlag_BSY(SPI1));
	DRchar = SPI1->DR;
	
	WaitUs(2);													// Delay time, final SCLK falling edge to CS high
	Mod_CS_Disable;
  __enable_irq();

  return DRchar;
}

void ADS1299_SendCommand(uint8_t command)
{
	__disable_irq();
	Mod_CS_Enable
	WaitUs(2);
	while(!LL_SPI_IsActiveFlag_TXE(SPI1));
	SPI1->DR = command;
	while(!LL_SPI_IsActiveFlag_RXNE(SPI1));
	command = SPI1->DR;
	WaitUs(2);													// Delay time, final SCLK falling edge to CS high
	Mod_CS_Disable
  __enable_irq();
	WaitUs(2);													// Pulse duration, CS high
}

void ADS1299_ReadResult(uint8_t *result)
{
	uint8_t i;
  Mod_CS_Enable;
	WaitUs(2); // 6ns Delay time - CS low to first SCLK 

	//	for(i=0;i<27;i++)
//	{
//		*(result++) = ADS1299_ReadByte();
//	}
	
	//DMA test
	ADS1299_ReadResult_DMA((uint32_t)result, 27); //DMA Read Bug Temporal fixed 5-13
	
	while(!LL_DMA_IsActiveFlag_TC0(DMA2)); // Wait until all data trasferred from SPI1_RX
	
	LL_SPI_DisableDMAReq_TX(SPI1);
	LL_SPI_DisableDMAReq_RX(SPI1);
	
	LL_DMA_ClearFlag_TC3(DMA2);
	LL_DMA_ClearFlag_TC0(DMA2);
	
	//printf("R%d %d %d ",ResultBuffer[3],ResultBuffer[4],ResultBuffer[5]);
	
	//WaitUs(4);
	//Mod_CS_Disable;
}
